--- a/styles/style.css
+++ b/styles/style.css
@@ -37,7 +37,7 @@ body{
 
 #menu{
   grid-area: menu;
-  background-color: #C0C0C0;
+  background-color: #A1BCBC;
 }
 
 .main{
@@ -116,13 +116,80 @@ nav ul li {
 }
 
 nav ul li:hover {
-  background-color: rgba(50, 50, 50, 0.5);
+  background-color: red /*rgba(50, 50, 50, 0.5)*/;
 }
 
 nav > ul > li > a {
   color: #fff;
   text-decoration: none;
 }
+
+/*----------TRYOUT--------------*/
+/*a {
+  text-decoration: none;
+}
+
+nav {
+    font-family: monospace;
+}
+
+ul {
+  background: darkorange;
+    list-style: none;
+    margin: 0;
+    padding-left: 0;
+}
+
+li {
+    color: #fff;
+  background: darkorange;
+    display: block;
+    float: left;
+    padding: 1rem;
+    position: relative;
+    text-decoration: none;
+  transition-duration: 0.5s;
+}
+  
+li a {
+  color: #fff;
+}
+
+li:hover,
+li:focus-within {
+    background: red;
+    cursor: pointer;
+}
+
+li:focus-within a {
+  outline: none;
+}
+
+ul li ul {
+    background: orange;
+    visibility: hidden;
+  opacity: 0;
+  min-width: 5rem;
+    position: absolute;
+  transition: all 0.5s ease;
+  margin-top: 1rem;
+    left: 0;
+  display: none;
+}
+
+ul li:hover > ul,
+ul li:focus-within > ul,
+ul li ul:hover,
+ul li ul:focus {
+   visibility: visible;
+   opacity: 1;
+   display: block;
+}
+
+ul li ul li {
+    clear: both;
+  width: 100%;
+}*/
 
 /*---------------Hamburger menu---------------*/
 .menutoggle{
@@ -155,11 +222,13 @@ h2 {
   font-size: 1.5em;
   font-weight: bold;
   border-radius: 0.2em;
-}
+}*/
 
 h3 {
-  font-size: 0.8em;
-}*/
+  background-color: white;
+  text-align: center;
+  font-size: 1.3em; 
+}
 
 /*---------------Home---------------*/
 #home{
@@ -180,11 +249,21 @@ h3 {
 #wearables-tat{
   width: 50%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #wearables-chart{
   width: 10%;
   height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.fotos-wearables{
+  
 }
 
 /*---------------Playful interfaces---------------*/
@@ -236,7 +315,6 @@ footer p{
   nav ul li {
     padding: 0.5em;
     border-bottom: unset;
-    background-color: #A1BCBC;
   }
 
   .menutoggle{
