--- a/styles/style.css
+++ b/styles/style.css
@@ -31,7 +31,7 @@ body{
 
 .header{
   grid-area: title;
-  background-color: #C0C0C0;
+  background-color: #EEC8C6;
   padding-right: 1em;
 } 
 
@@ -42,25 +42,25 @@ body{
 
 .main{
   grid-area: main;
-  background-color: #C0C0C0;
+  background-color: #EEC8C6;
   padding: 0.2em 1em;
 }
 
 .main1{
   grid-area: main1;
-  background-color: #C0C0C0;
+  background-color: #EEC8C6;
   padding: 0.2em 1em;
 }
 
 .main2{
   grid-area: main2;
-  background-color: #C0C0C0;
+  background-color: #EEC8C6;
   padding: 0.2em 1em;
 }
 
 .foot {
   grid-area: foot;
-  background-color: #C0C0C0;
+  background-color: #ffe6e6;
   padding: 0.2em 1em;
 }
 
@@ -116,80 +116,13 @@ nav ul li {
 }
 
 nav ul li:hover {
-  background-color: red /*rgba(50, 50, 50, 0.5)*/;
+  background-color: #EEC8C6;
 }
 
 nav > ul > li > a {
   color: #fff;
   text-decoration: none;
 }
-
-/*----------TRYOUT--------------*/
-/*a {
-  text-decoration: none;
-}
-
-nav {
-    font-family: monospace;
-}
-
-ul {
-  background: darkorange;
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-}
-
-li {
-    color: #fff;
-  background: darkorange;
-    display: block;
-    float: left;
-    padding: 1rem;
-    position: relative;
-    text-decoration: none;
-  transition-duration: 0.5s;
-}
-  
-li a {
-  color: #fff;
-}
-
-li:hover,
-li:focus-within {
-    background: red;
-    cursor: pointer;
-}
-
-li:focus-within a {
-  outline: none;
-}
-
-ul li ul {
-    background: orange;
-    visibility: hidden;
-  opacity: 0;
-  min-width: 5rem;
-    position: absolute;
-  transition: all 0.5s ease;
-  margin-top: 1rem;
-    left: 0;
-  display: none;
-}
-
-ul li:hover > ul,
-ul li:focus-within > ul,
-ul li ul:hover,
-ul li ul:focus {
-   visibility: visible;
-   opacity: 1;
-   display: block;
-}
-
-ul li ul li {
-    clear: both;
-  width: 100%;
-}*/
 
 /*---------------Hamburger menu---------------*/
 .menutoggle{
@@ -213,21 +146,26 @@ ul li ul li {
 }
 
 /*---------------Teksten---------------*/
-/*h1 {
-  text-align: center;
-  font-size: 1.2em;
+h3 {
+  /*background-color: white;*/
+  /*text-align: center;*/
+  font-size: 1.3em; 
 }
 
-h2 {
-  font-size: 1.5em;
-  font-weight: bold;
-  border-radius: 0.2em;
-}*/
+a{
+  text-decoration: none;
+}
 
-h3 {
-  background-color: white;
-  text-align: center;
-  font-size: 1.3em; 
+a:link{
+  color: grey;
+}
+
+a:hover{
+  color: black;
+}
+
+a:visited{
+  color: white;
 }
 
 /*---------------Home---------------*/
@@ -236,9 +174,9 @@ h3 {
 }
 
 .djenna-foto{
-  width: 300px;
+  width: 60%;
   padding: 5px;
-  float: left;
+  /*float: left;*/
 }
 
 /*---------------Wearables---------------*/
@@ -249,17 +187,17 @@ h3 {
 #wearables-tat{
   width: 50%;
   height: auto;
-  display: block;
+/*  display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;*/
 }
 
 #wearables-chart{
   width: 10%;
   height: auto;
-  display: block;
+/*  display: block;
   margin-left: auto;
-  margin-right: auto;
+  margin-right: auto;*/
 }
 
 .fotos-wearables{
@@ -267,9 +205,33 @@ h3 {
 }
 
 /*---------------Playful interfaces---------------*/
+#playful-img{
+  width: 30%;
+  height: auto;
+}
 
+#playful-vid{
+  width: 50%;
+  height: auto;
+}
+
+#playful-tech{
+  float: left;
+  margin: 3px;
+}
 /*---------------Articifial creatures---------------*/
+#ac-media{
+  float: none;
+}
+.ac-foto{
+  width: 100%;
+  height: auto;
+}
 
+.ac-video{
+  width: 100%;
+  height: 200px;
+}
 /*---------------AR & VR---------------*/
 
 /*---------------Arduino---------------*/
@@ -306,6 +268,9 @@ footer p{
     text-align: center;
 }
 
+#link-footer{
+  text-decoration: none;
+}
 /*---------------Tablet en groter---------------*/
 @media only screen and (min-width: 900px){
   .logo{
@@ -356,5 +321,25 @@ footer p{
 
   .language-css{
     width: 65%;
+  }
+  /*---------------Playful interfaces---------------*/
+  #playful-vid{
+    width: 640px;
+    height: 360px;
+  }
+
+  /*---------------Articifial creatures---------------*/
+  #ac-media{
+    float: left;
+  }
+
+  .ac-foto{
+    width: 45%;
+    height: auto;
+  }
+
+  .ac-video{
+    width: 1000px;
+    height: 500px;
   }
 }
