--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand:400');
+@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
 
 html {
 	box-sizing: border-box;
@@ -73,10 +74,10 @@ body{
 }
 
 header {
-  display: flex;
+  /*display: flex;*/
+  text-align: left; 
   flex-flow: row;
-  align-content: center;
-  text-align: center;
+  float: left;
 }
 
 .titel-hci{
@@ -114,6 +115,7 @@ nav ul li {
   list-style: none;
   justify-content: center;
   border-bottom: 1px solid black;
+  font-family: "Quicksand", sans-serif;
 }
 
 nav ul li:hover {
@@ -147,10 +149,22 @@ nav > ul > li > a {
 }
 
 /*---------------Teksten---------------*/
+h1{
+  font-family: "Quicksand";
+  font-weight: bolder;
+}
+
+h2{
+  font-family: "Quicksand";
+  font-weight: bolder;
+}
+
 h3 {
   /*background-color: white;*/
   /*text-align: center;*/
   font-size: 1.3em; 
+  font-family: "Quicksand";
+  font-weight: bolder;
 }
 
 a{
