--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,8 @@ body{
   width: 75px;
   height: 100%;
   position: relative;
-  padding-left: 5%;
+  padding: 5% 5% 5% 5%;
+  margin: 1%;
 }
 
 header {
@@ -244,6 +245,19 @@ a:hover{
   height: 200px;
 }
 /*---------------AR & VR---------------*/
+#ar-tech{
+  /*float: left;*/
+}
+
+#ar-img{
+  width: 45%;
+  height: auto;
+}
+
+#ar-vid{
+  width: 100%;
+  height: 100%;
+}*/
 
 /*---------------Arduino---------------*/
 .arduino-vid{
@@ -355,6 +369,21 @@ footer p{
   }
 
   .ac-video{
+    width: 1000px;
+    height: 500px;
+  }
+
+  /*---------------AR & VR---------------*/
+  #ar-tech{
+    /*float: left;*/
+  }
+
+  #ar-img{
+    width: 45%;
+    height: auto;
+  }
+
+  #ar-vid{
     width: 1000px;
     height: 500px;
   }
