--- a/styles/style.css
+++ b/styles/style.css
@@ -250,14 +250,14 @@ a:hover{
 }
 
 #ar-img{
-  width: 45%;
+  width: 100%;
   height: auto;
 }
 
 #ar-vid{
   width: 100%;
-  height: 100%;
-}*/
+  height: 200px;
+}
 
 /*---------------Arduino---------------*/
 .arduino-vid{
@@ -375,7 +375,7 @@ footer p{
 
   /*---------------AR & VR---------------*/
   #ar-tech{
-    /*float: left;*/
+    float: left;
   }
 
   #ar-img{
@@ -384,7 +384,7 @@ footer p{
   }
 
   #ar-vid{
-    width: 1000px;
+    width: 100%;
     height: 500px;
   }
 }
