--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,7 @@ body{
         "main  main  main"
         "main1  main1  main1"
         "main2  main2  main2"
+        "main3  main3  main3"
         "foot  foot  foot"; 
   grid-gap: 10px;
 }
@@ -55,6 +56,12 @@ body{
 
 .main2{
   grid-area: main2;
+  background-color: #EEC8C6;
+  padding: 0.2em 1em;
+}
+
+.main3{
+  grid-area: main3;
   background-color: #EEC8C6;
   padding: 0.2em 1em;
 }
@@ -249,12 +256,12 @@ a:hover{
   /*float: left;*/
 }
 
-#ar-img{
+.ar-img{
   width: 100%;
   height: auto;
 }
 
-#ar-vid{
+.ar-vid{
   width: 100%;
   height: 200px;
 }
@@ -272,6 +279,13 @@ a:hover{
 
 .language-css{
   width: 100%;
+  /*font-size: 0.8em;*/
+  /*line-height: normal;*/
+}
+
+hr{
+  /*background-color: black;*/
+  border: 1px solid black;
 }
 /*---------------VR environments---------------*/
 
