--- a/styles/style.css
+++ b/styles/style.css
@@ -288,7 +288,9 @@ hr{
   border: 1px solid black;
 }
 /*---------------VR environments---------------*/
-
+.vr-video{
+  
+}
 /*---------------Computer vision---------------*/
 
 /*---------------Excursion---------------*/
